Add application builder endpoints
