# src/openapi.yaml
@@ -35,6 +35,8 @@ tags:
     description: Manage program positions
   - name: brandingContact
     description: Manage branding and contact details
+  - name: applications
+    description: Manage program application forms
 paths:
   /health:
     get:
@@ -950,6 +952,127 @@ paths:
                 contactPhone: "123-456-7890"
                 contactWebsite: https://txboysstate.org
                 contactFacebook: https://facebook.com/txboysstate
+        "403":
+          description: Forbidden
+          content:
+            application/json:
+              example: {}
+        "404":
+          description: Not found
+          content:
+            application/json:
+              example: {}
+      security:
+        - bearerAuth: []
+  /api/programs/{programId}/application:
+    get:
+      tags:
+        - applications
+      summary: Get application configuration
+      parameters:
+        - in: path
+          name: programId
+          required: true
+          schema:
+            type: string
+      responses:
+        "200":
+          description: Application configuration
+          content:
+            application/json:
+              schema:
+                type: object
+        "404":
+          description: Not found
+          content:
+            application/json:
+              example: {}
+    post:
+      tags:
+        - applications
+      summary: Create application configuration
+      parameters:
+        - in: path
+          name: programId
+          required: true
+          schema:
+            type: string
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+      responses:
+        "201":
+          description: Created configuration
+          content:
+            application/json:
+              schema:
+                type: object
+        "403":
+          description: Forbidden
+          content:
+            application/json:
+              example: {}
+        "404":
+          description: Not found
+          content:
+            application/json:
+              example: {}
+      security:
+        - bearerAuth: []
+    put:
+      tags:
+        - applications
+      summary: Update application configuration
+      parameters:
+        - in: path
+          name: programId
+          required: true
+          schema:
+            type: string
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+      responses:
+        "201":
+          description: Created configuration
+          content:
+            application/json:
+              schema:
+                type: object
+        "403":
+          description: Forbidden
+          content:
+            application/json:
+              example: {}
+        "404":
+          description: Not found
+          content:
+            application/json:
+              example: {}
+      security:
+        - bearerAuth: []
+    delete:
+      tags:
+        - applications
+      summary: Delete application configuration
+      parameters:
+        - in: path
+          name: programId
+          required: true
+          schema:
+            type: string
+      responses:
+        "200":
+          description: Deleted
+          content:
+            application/json:
+              example: {}
         "403":
           description: Forbidden
           content:
